replace some unmodifiable collections with modifiable ones